New analysis_server snapshot and completion.dart in analysis_services.
R=brianwilkerson@google.com
BUG=

Review URL: https://codereview.chromium.org//263213007

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge@35817 260f80e4-7a28-3924-810f-c04153c831b5